update gateway proto for crl

--- a/networking/v1alpha3/gateway.pb.html
+++ b/networking/v1alpha3/gateway.pb.html
@@ -441,6 +441,15 @@ client side certificate.</p>
 
 </td>
 </tr>
+<tr id="Server-TLSOptions-crl">
+<td><code>crl</code></td>
+<td><code>string</code></td>
+<td>
+<p>Optional: The path to a file containing certificate revocation list
+to use in verifying a presented client side certificate.</p>
+
+</td>
+</tr>
 <tr id="Server-TLSOptions-credential_name">
 <td><code>credentialName</code></td>
 <td><code>string</code></td>
